--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -10,7 +10,7 @@
     "greeting": "Hi, I'm",
     "name": "Bruno Luvizotto",
     "role": "Full Stack Developer",
-    "tagline": "Building modern web applications with clean code and great user experiences.",
+    "tagline": "Building modern web applications with clean code and great UX.",
     "cta_work": "View My Work"
   },
   "about": {
