--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -11,7 +11,7 @@
     "name": "Bruno Luvizotto",
     "role": "Full Stack Developer",
     "tagline": "Building modern web applications with clean code and great UX.",
-    "cta_work": "View My Work"
+    "cta_work": "View my experiences"
   },
   "about": {
     "heading": "About",
