--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -11,7 +11,7 @@
     "name": "Bruno Luvizotto",
     "role": "Desenvolvedor Full Stack",
     "tagline": "Construindo aplicações web modernas com código limpo e ótima UX.",
-    "cta_work": "Ver Meu Trabalho"
+    "cta_work": "Ver minhas experiências"
   },
   "about": {
     "heading": "Sobre",
